--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: seleniumtestdemoapp
-          image: ashwitharapelli/week12:seleniumtestimage   # use your Docker Hub image
+          image: vishnupriya68/sample1:seleniumtestimage   # use your Docker Hub image
           ports:
             - containerPort: 5000
